--- a/springmvc_mybatis/config/log4j.properties
+++ b/springmvc_mybatis/config/log4j.properties
@@ -1,5 +1,4 @@
-# Global logging configuration
-#\u5728\u5f00\u53d1\u73af\u5883\u4e0b\u65e5\u5fd7\u7ea7\u522b\u8981\u8bbe\u7f6e\u6210DEBUG\uff0c\u751f\u4ea7\u73af\u5883\u8bbe\u7f6e\u6210info\u6216error
+# Global logging configuration\uff0c\u5efa\u8bae\u5f00\u53d1\u73af\u5883\u4e2d\u8981\u7528debug
 log4j.rootLogger=DEBUG, stdout
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
