--- a/springmvc_mybatis/.settings/org.eclipse.core.resources.prefs
+++ b/springmvc_mybatis/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebRoot/jsonTest.jsp=UTF-8
 encoding//src/cn/itcast/ssm/controller/ItemsController.java=UTF-8
 encoding//src/cn/itcast/ssm/service/impl/ItemsServiceImpl.java=UTF-8
